[package]
name = "ctx"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio-timer"
homepage = "https://github.com/tokio-rs/tokio-timer"
documentation = "https://docs.rs/tokio-timer"
description = """
Context defines a type, which carries deadlines, cancelation, and other request-scoped values across API boundaries and between processes.
"""

[dependencies]
futures = "0.1"
tokio-timer = "0.1"
