[package]
name = "ctx"
version = "0.1.2"
authors = ["Markus Ast <m@rkusa.st>"]
license = "MIT"
repository = "https://github.com/rkusa/ctx"
homepage = "https://github.com/rkusa/ctx"
documentation = "https://docs.rs/ctx"
description = """
Context defines a type, which carries deadlines, cancelation, and other request-scoped values across API boundaries and between processes.
"""

[dependencies]
futures = "0.1"
tokio-timer = "0.1"
lazy_static = "0.2"
